--- a/reset.css
+++ b/reset.css
@@ -1,77 +1,494 @@
-@font-face {
+:root {
+    --letter-color: #FFFFFF;
+    --btn-color: #F5DF4D;
+    --bg-color: #5B2386;
+    --input-color: #BABCBE;
+    --shadow-color: rgba(0, 0, 0, 0.15);
+}
+
+body {
+    width: 100vw;
+    height: auto;
+    background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    width: 771px;
+    height: 1632px;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    width: 564px;
+    height: 265px;
+    position: relative;
+    margin-bottom: 52px;
+}
+
+.title .title_img {
+    width: 564px;
+    aspect-ratio: 564 / 112;
+    position: absolute;
+    top: 74px;
+    left: 0;
+}
+
+.title .clock {
+    width: 261px;
+    aspect-ratio: 261 / 265;
+    position: absolute;
+    top: 0;
+    left: 152px;
+}
+
+h2 {
+    width: fit-content;
+    height: fit-content;
     font-family: 'JoyfulStory';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff') format('woff');
+    font-size: 36px;
     font-weight: 400;
-    font-display: swap;
+    line-height: 40px;
+    color: var(--btn-color);
+    margin-bottom: 80px;
 }
 
-@font-face {
-    font-family: 'GMarketSans';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
-    font-weight: 300;
-    font-display: swap;
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-@font-face {
-    font-family: 'GMarketSans';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: 500;
-    font-display: swap;
+.phr1 {
+    width: 485px;
+    height: 85px;
+    position: relative;
+    margin-bottom: 100px;
 }
 
-@font-face {
-    font-family: 'GMarketSans';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+.phr1 img {
+    opacity: 30%;
+    position: absolute;
+    top: 26.5px;
+    left: 0;
+}
+
+.phr1 p {
+    width: 373px;
+    height: 85px;
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--letter-color);
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 56px;
+}
+
+.phr1 p span {
+    width: fit-content;
+    height: fit-content;
+    font-size: 24px;
     font-weight: 700;
-    font-display: swap;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.phr2 {
+    width: 771px;
+    height: 132px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 120px;
+}
+
+.phr2 p {
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--letter-color);
+}
+
+.phr2 input {
+    width: 228px;
+    height: 56px;
+    border-radius: 8px;
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--input-color);
+    margin: 0 20px;
+}
+
+.phr2 input::placeholder {
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--input-color);
+}
+
+.btn1 {
+    width: 567px;
+    height: 64px;
+    background-color: var(--btn-color);
+    margin-bottom: 142px;
+}
+
+.click {
+    width: 64px;
+    aspect-ratio: 64 / 72;
+    position: absolute;
+    top: 888px;
+    right: 34px;
+}
+
+.phr3 {
+    width: 663px;
+    height: 164px;
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 120px;
+}
+
+.phr3 p {
+    font-size: 24px;
+    font-weight: 400;
+    color: var(--letter-color);
+    display: flex;
+    align-items: center;
+}
+
+.phr3 p span {
+    font-size: 72px;
+    font-weight: 700;
+    width: fit-content;
+    height: 72px;
+    padding: 0 12px;
+}
+
+.btngroup {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 120px;
+}
+
+.btngroup .btn2 {
+    width: 365px;
+    height: 64px;
+    background-color: var(--btn-color);
+}
+
+.btngroup .btn3 {
+    width: 193px;
+    height: 64px;
+    background-color: var(--letter-color);
+}
+
+button {
+    border-radius: 12px;
+    box-shadow: 2px 4px 10px 0 var(--shadow-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button p {
+    font-family: 'GMarketSans';
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 130%;
+    color: var(--bg-color);
+}
+
+footer {
+    width: 365px;
+    height: 84px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 106px;
+}
+
+footer img {
+    width: 168px;
+    aspect-ratio: 168 / 36;
+}
+
+footer p {
+    font-family: 'Noto Sans KR';
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--letter-color);
+    text-align: center;
+}
+
+.overlay {
+    width: 800px;
+    height: 816px;
+    border-radius: 20px;
+    background-color: var(--letter-color);
+    box-shadow: 4px 4px 30px 0 var(--shadow-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.container2 {
+    width: 508px;
+    height: 656px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container2 section {
+    width: 396px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.container2 section p {
+    font-family: 'JoyfulStory';
+    font-weight: 400;
+    color: var(--bg-color);
+    width: fit-content;
+    height: fit-content;
+}
+
+.container2 section p:nth-child(1) {
+    font-size: 96px;
+    height: 106px;
+}
+
+.container2 section p:nth-child(2) {
+    font-size: 36px;
+    height: 40px;
+}
+
+.container2 img {
+    width: 438px;
+    aspect-ratio: 438 / 342;
+    margin-bottom: 60px;
+}
+
+.container2 button {
+    width: 508px;
+    height: 64px;
+    background-color: var(--btn-color);
+}
+
+@media (max-width:771px) {
+    .container {
+        width: 360px;
+        height: 1052px;
+        margin-top: 0;
     }
 
-html {
-    font-size: 10px;
-}
-    
-body {
-    font-family: 'GMarketSans',sans-serif;
-    font-size: 1.6rem;
-    border: none;
-}
-    
-img {
-    max-width: 100%;
-    height: auto;
-}
-    
-a {
-    text-decoration: none;
-    color: inherit;
-}
+    .title {
+        width: 278px;
+        height: 130px;
+        margin-top: 40px;
+        margin-bottom: 32px;
+    }
 
-a:hover {
-    text-decoration: underline;
-}
+    .title .title_img {
+        width: 278px;
+        top: 36.3px;
+    }
 
-ul,
-ol {
-    list-style: none;
-}
-    
-button {
-    cursor: pointer;
-    border: none;
-    background-color: inherit;
-}
+    .title .clock {
+        width: 128.65px;
+        left: 74.92px;
+    }
 
-.sr-only {
-    position: absolute;
-    left: -9999px;
-    top: auto;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
+    h2 {
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 100%;
+        margin-bottom: 32px;
+    }
+
+    .phr1 {
+        width: 330px;
+        height: 68px;
+        margin-bottom: 60px;
+    }
+
+    .phr1 img {
+        top: 25px;
+    }
+
+    .phr1 p {
+        width: 290px;
+        height: 68px;
+        font-size: 14px;
+        left: 20px;
+    }
+
+    .phr1 p span {
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    .phr2 {
+        width: 319px;
+        height: 114px;
+        margin-bottom: 80px;
+        gap: 12px;
+    }
+
+    .phr2 p {
+        font-size: 14px;
+    }
+
+    .phr2 p:nth-child(2) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .phr2 input {
+        width: 156px;
+        height: 38px;
+        font-size: 14px;
+        margin: 0 8px;
+    }
+
+    .phr2 input::placeholder {
+        font-size: 14px;
+    }
+
+    .btn1 {
+        width: 240px;
+        height: 72px;
+        margin-bottom: 68px;
+    }
+
+    .btn1 p {
+        width: 164px;
+        height: 32px;
+    }
+
+    .click {
+        width: 43px;
+        aspect-ratio: 64 / 72;
+        top: 620px;
+        right: 17px;
+    }
+
+    .phr3 {
+        width: 286px;
+        height: 64px;
+        margin-bottom: 52px;
+        gap: 16px;
+        margin-bottom: 52px;
+    }
+
+    .phr3 p {
+        font-size: 12px;
+    }
+
+    .phr3 p span {
+        font-size: 24px;
+        font-weight: 500;
+        height: 24px;
+    }
+
+    .btngroup {
+        gap: 8px;
+        margin-bottom: 60px;
+    }
+
+    .btngroup .btn2 {
+        width: 203px;
+        height: 46px;
+    }
+
+    .btngroup .btn3 {
+        width: 102px;
+        height: 46px;
+    }
+
+    button {
+        font-size: 14px;
+    }
+
+    button p {
+        font-size: 14px;
+    }
+
+    footer {
+        width: 261px;
+        height: 62px;
+        gap: 12px;
+        margin-bottom: 48px;
+    }
+
+    footer img {
+        width: 125px;
+    }
+
+    footer p {
+        font-size: 9px;
+    }
+
+    .overlay {
+        width: 330px;
+        height: 500px;
+    }
+
+    .container2 {
+        width: 251px;
+        height: 418px;
+    }
+
+    .container2 section {
+        width: 251px;
+        height: 110px;
+        margin-bottom: 24px;
+    }
+
+    .container2 section p:nth-child(1) {
+        font-size: 64px;
+        width: 251px;
+        height: 70px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .container2 img {
+        width: 240px;
+        margin-bottom: 24px;
+    }
+
+    .container2 button {
+        width: 251px;
+        height: 72px;
+    }
 }
