--- a/랜딩페이지/style.css
+++ b/랜딩페이지/style.css
@@ -20,6 +20,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: sticky;
 }
 
 header .container_navigation-bar {
@@ -63,9 +64,7 @@ header .container_navigation-bar nav ul li {
     font-weight: 400;
 }
 
-.btn-download {
-    width: 141px;
-    height: 52px;
+button {
     background-color: var(--btn-color);
     border-radius: 40px;
     color: var(--btn-p-color);
@@ -73,9 +72,14 @@ header .container_navigation-bar nav ul li {
     font-weight: 700;
 }
 
+.btn-download {
+    width: 141px;
+    height: 52px;
+}
+
 main {
     width: 100%;
-    height: 2685px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,7 +89,7 @@ main {
 
 main .section-hero {
     width: 100%;
-    height: 798px;
+    height: fit-content;
     background-color: var(--bg-color);
     display: flex;
     flex-wrap: wrap;
@@ -130,11 +134,12 @@ main .section-container {
 
 main .section-container .section-feature-01 {
     width: 100%;
-    height: 390px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 110px;
+    flex-wrap: wrap;
 }
 
 main .section-container .section-feature-01 img {
@@ -146,6 +151,11 @@ main .section-container .section-feature-01 img {
 main .section-container .section-feature-01 .feature-content {
     width: 510px;
     height: 224px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 36px;
 }
 
 main .section-container .section-feature-01 .feature-content h3 {
@@ -159,9 +169,156 @@ main .section-container .section-feature-01 .feature-content p {
     font-size: 16px;
     font-weight: 400;
     color: var(--p-color);
+    text-align: left;
+}
+
+main .section-container .section-feature-02 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+}
+
+main .section-container .section-feature-02 .feature-header {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 36px;
+}
+
+main .section-container .section-feature-02 .feature-header h3 {
+    width: 100%;
+    font-size: 48px;
+    font-weight: 700;
+    color: var(--btn-color);
+    text-align: center;
+}
+
+main .section-container .section-feature-02 .feature-header p {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--p-color);
+    text-align: center;
+}
+
+main .section-container .section-feature-02 .feature-header p span {
+    font-weight: 700;
+    color: var(--btn-color);
+}
+
+main .section-container .section-feature-02 .card-grid {
+    width: 1280px;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 73px;
+}
+
+main .section-container .section-feature-02 .card-grid img {
+    aspect-ratio: 1 / 1;
+    border-radius: 30px;
+}
+
+main .section-container .section-feature-02 .feature-footer {
+    width: fit-content;
+    height: fit-content;
+    flex-wrap: wrap;
+}
+
+main .section-container .section-feature-02 .feature-footer p {
+    max-width: 737px;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--p-color);
+    float: left;
+    text-align: left;
+}
+
+main .section-container .section-feature-02 .feature-footer .btn-learn {
+    width: 149px;
+    height: 50px;
+    float: right;
+}
+
+main .section-container .section-feature-03 {
+    width: 100%;
+    height: fit-content;
+    padding: 30px;
+    border-radius: 30px;
+    background-color: var(--sub-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+main .section-container .section-feature-03 .newsletter-content {
+    max-width: 490px;
+    color: var(--btn-p-color);
+    text-align: left;
+}
+
+main .section-container .section-feature-03 .newsletter-content h3 {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+main .section-container .section-feature-03 .newsletter-content p {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+main .section-container .section-feature-03 .newletter-form {
+    width: 530px;
+    height: fit-content;
+    position: relative;
+}
+
+main .section-container .section-feature-03 .newletter-form img {
+    width: 24px;
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    top: 18px;
+    left: 23px;
+}
+
+main .section-container .section-feature-03 .newletter-form input {
+    width: 530px;
+    height: 60px;
+    background-color: var(--btn-p-color);
+    border-radius: 60px;
+    color: var(--p-color);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+main .section-container .section-feature-03 .newletter-form .btn-sub {
+    width: 138px;
+    height: 50px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
 }
 
 
+
+
+main .img {
+    width: 100%;
+    height: 340px;
+    background-image: url(./img/img_5.jpg);
+    background-repeat: no-repeat;
+    background-position: 0% 40%;
+    background-size: cover;
+}
 
 /* .scroll-top-btn {
     width: 50px;
