--- a/랜딩페이지/style.css
+++ b/랜딩페이지/style.css
@@ -7,323 +7,529 @@
     --social-color:#F29D52;
 }
 
-body {
-    width: 100vw;
-    height: auto;
-    background-color: var(--btn-p-color);
+@media (min-width: 1280px), (max-width: 1920px) {
+    body {
+        width: 100vw;
+        max-width: 1920px;
+        min-width: 390px;
+        height: auto;
+        background-color: var(--btn-p-color);
+    }
+    
+    header {
+        width: 100%;
+        height: 102px;
+        background-color: var(--bg-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+    
+    header .container_navigation-bar {
+        width: 66.6%;
+        height: 52px;
+        position: relative;
+    }
+    
+    header .container_navigation-bar .logo {
+        width: 130px;
+        aspect-ratio: 13 / 4;
+        position: absolute;
+        top: 6px;
+        left: 0px;
+    }
+    
+    header .container_navigation-bar nav {
+        width: fit-content;
+        height: 52px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+    
+    header .container_navigation-bar nav ul {
+        width: fit-content;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+    }
+    
+    header .container_navigation-bar nav ul li {
+        width: fit-content;
+        height: fit-content;
+        font-size: 16px;
+        font-weight: 400;
+    }
+    
+    button {
+        background-color: var(--btn-color);
+        border-radius: 40px;
+        color: var(--btn-p-color);
+        font-size: 16px;
+        font-weight: 700;
+    }
+    
+    .btn-download {
+        width: 141px;
+        height: 52px;
+    }
+    
+    header .container_navigation-bar .menu {
+        width: 32px;
+        aspect-ratio: 1 / 1;
+        display: none;
+    }
+    
+    main {
+        width: 100%;
+        height: 2685px;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    
+    main .section-hero {
+        width: 100%;
+        height: fit-content;
+        background-color: var(--bg-color);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 131px;
+        position: absolute;
+        top: 0;
+    }
+    
+    main .section-hero .hero-content {
+        width: 734px;
+        height: 354px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 40px;
+    }
+    
+    main .section-hero .hero-content h2 {
+        font-size: 48px;
+        font-weight: 700;
+        color: var(--p-color);
+    }
+    
+    main .section-hero .hero-content p {
+        width: 438px;
+        height: 94px;
+        font-size: 16px;
+        font-weight: 400;
+        color: var(--p-color);
+    }
+    
+    main .section-hero .img_1 {
+        width: 415px;
+        height: 798px;
+        background-image: url(./img/box-cat.png);
+        background-repeat: no-repeat;
+    }
+    
+    main .section-container {
+        width: 1280px;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 110px;
+        margin-top: 878px;
+    }
+    
+    main .section-container .section-feature-01 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 110px;
+        flex-wrap: wrap;
+    }
+    
+    main .section-container .section-feature-01 .img_4 {
+        width: 660px;
+        height: 390px;
+        border-radius: 30px;
+        box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.25);
+        background-image: url(./img/img_4.jpg);
+        background-repeat: no-repeat;
+        background-position: 0 30%;
+        background-size: cover;
+    }
+    
+    main .section-container .section-feature-01 .feature-content {
+        width: 510px;
+        height: 224px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 36px;
+    }
+    
+    main .section-container .section-feature-01 .feature-content h3 {
+        font-size: 36px;
+        font-weight: 700;
+        color: var(--p-color);
+        text-align: center;
+    }
+    
+    main .section-container .section-feature-01 .feature-content p {
+        font-size: 16px;
+        font-weight: 400;
+        color: var(--p-color);
+        text-align: left;
+    }
+    
+    main .section-container .section-feature-02 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
+    }
+    
+    main .section-container .section-feature-02 .feature-header {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 36px;
+    }
+    
+    main .section-container .section-feature-02 .feature-header h3 {
+        width: 100%;
+        font-size: 48px;
+        font-weight: 700;
+        color: var(--btn-color);
+        text-align: center;
+    }
+    
+    main .section-container .section-feature-02 .feature-header p {
+        font-size: 16px;
+        font-weight: 400;
+        color: var(--p-color);
+        text-align: center;
+    }
+    
+    main .section-container .section-feature-02 .feature-header p span {
+        font-weight: 700;
+        color: var(--btn-color);
+    }
+    
+    main .section-container .section-feature-02 .card-grid {
+        width: 1280px;
+        height: fit-content;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 73px;
+    }
+    
+    main .section-container .section-feature-02 .card-grid img {
+        aspect-ratio: 1 / 1;
+        border-radius: 30px;
+        box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.25);
+    }
+    
+    main .section-container .section-feature-02 .feature-footer {
+        width: fit-content;
+        height: fit-content;
+        flex-wrap: wrap;
+    }
+    
+    main .section-container .section-feature-02 .feature-footer p {
+        max-width: 737px;
+        font-size: 16px;
+        font-weight: 400;
+        color: var(--p-color);
+        float: left;
+        text-align: left;
+    }
+    
+    main .section-container .section-feature-02 .feature-footer .btn-learn {
+        width: 149px;
+        height: 50px;
+        float: right;
+    }
+    
+    main .section-container .section-feature-03 {
+        width: 100%;
+        height: 200px;
+        padding: 30px;
+        border-radius: 30px;
+        background-color: var(--sub-color);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 30px;
+        flex-wrap: wrap;
+    }
+    
+    main .section-container .section-feature-03 .newsletter-content {
+        max-width: 490px;
+        color: var(--btn-p-color);
+        text-align: left;
+    }
+    
+    main .section-container .section-feature-03 .newsletter-content h3 {
+        font-size: 36px;
+        font-weight: 700;
+    }
+    
+    main .section-container .section-feature-03 .newsletter-content p {
+        font-size: 14px;
+        font-weight: 400;
+    }
+    
+    main .section-container .section-feature-03 .newletter-form {
+        width: 530px;
+        height: fit-content;
+        position: relative;
+    }
+    
+    main .section-container .section-feature-03 .newletter-form img {
+        width: 24px;
+        aspect-ratio: 1 / 1;
+        position: absolute;
+        top: 18px;
+        left: 23px;
+    }
+    
+    main .section-container .section-feature-03 .newletter-form input {
+        width: 530px;
+        height: 60px;
+        background-color: var(--btn-p-color);
+        border-radius: 60px;
+        color: var(--p-color);
+        font-size: 16px;
+        font-weight: 400;
+    }
+    
+    main .section-container .section-feature-03 .newletter-form .btn-sub {
+        width: 138px;
+        height: 50px;
+        position: absolute;
+        right: 5px;
+        bottom: 5px;
+    }
+    
+    main .img_5 {
+        width: 100%;
+        height: 340px;
+        background-image: url(./img/img_5.jpg);
+        background-repeat: no-repeat;
+        background-position: 0% 40%;
+        background-size: cover;
+        position: absolute;
+        bottom: 0;
+        z-index: -1;
+    }
+    
+    main .img_5 .background {
+        width: 100%;
+        height: 100%;
+        background-color: var(--bg-color);
+        opacity: 60%;
+    }
+    
+    .scroll-top-btn {
+        width: 50px;
+        height: 50px;
+        border: solid 1px #c4c4c4;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        float: right;
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        z-index: 1;
+    }
+    
+    footer {
+        width: 100%;
+        height: 160px;
+        background-color: var(--btn-p-color);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    footer > img {
+        width: 226px;
+        aspect-ratio: 226 / 70;
+    }
+    
+    footer .social-icons {
+        width: 220px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    footer .social-icons > div {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--social-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .modal {
+        width: 600px;
+        height: 400px;
+        border-radius: 30px;
+        background-image: url(./img/modal-bg-img.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        display: none;
+    }
+    
+    .modal .container {
+        width: fit-content;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 60px;
+    }
+    
+    .modal .container img {
+        width: 110px;
+        aspect-ratio: 110 / 112;
+        margin-bottom: 24px;
+    }
+    
+    .modal .container h2 {
+        font-size: 36px;
+        font-weight: 700;
+        color: var(--btn-color);
+        margin-bottom: 12px;
+    }
+    
+    .modal .container p {
+        font-size: 14px;
+        font-weight: 400;
+        color: #000000;
+        margin-bottom: 34px;
+    }
+    
+    .modal .container button {
+        width: 191px;
+        height: 52px;
+    }
 }
 
-header {
-    width: 100%;
-    height: 102px;
-    background-color: var(--bg-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: sticky;
+@media (min-width: 901px), (max-width: 1279px) {
+
+    main {
+        height: 2531px;
+    }
+
+    main .section-hero {
+        width: 100%;
+        gap: 32px;
+    }
+
+    main .section-hero .hero-content {
+        width: fit-content;
+        height: fit-content;
+        align-items: center;
+    }
+
+    main .section-hero .hero-content h2 {
+        text-align: center;
+    }
+
+    main .section-hero .hero-content p {
+        width: fit-content;
+        height: fit-content;
+        text-align: center;
+    }
 }
 
-header .container_navigation-bar {
-    width: 66.6%;
-    height: 52px;
-    position: relative;
+@media (max-width: 900px) {
+    header {
+        height: 76px;
+    }
+
+    header .container_navigation-bar {
+        width: 100%;
+        height: 100%;
+    }
+
+    header .container_navigation-bar .logo {
+        width: 92px;
+        aspect-ratio: 92 / 28;
+        position: absolute;
+        top: 24px;
+        left: 20px;
+    }
+
+    header .container_navigation-bar nav {
+        display: none;
+    }
+
+    button {
+        font-size: 14px;
+    }
+
+    .btn-download {
+        width: 119px;
+        height: 40px;
+    }
+
+    header .container_navigation-bar .menu {
+        display: block;
+        position: absolute;
+        top: 22px;
+        right: 20px;
+    }
+
+    main .section-hero .hero-content {
+        gap: 20px;
+        margin: 40px 32px 0 32px;
+    }
+
+    main .section-hero .hero-content h2 {
+        font-size: 24px;
+    }
+
+    main .section-hero .hero-content p {
+        font-size: 14px;
+    }
+
+    main .section-hero .img_1 {
+        width: 205.5px;
+        height: 362px;
+        background-size: cover;
+    }
 }
-
-header .container_navigation-bar img {
-    width: 130px;
-    aspect-ratio: 13 / 4;
-    position: absolute;
-    top: 6px;
-    left: 0px;
-}
-
-header .container_navigation-bar nav {
-    width: 395px;
-    height: 52px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-}
-
-header .container_navigation-bar nav ul {
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-}
-
-header .container_navigation-bar nav ul li {
-    width: fit-content;
-    height: fit-content;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-button {
-    background-color: var(--btn-color);
-    border-radius: 40px;
-    color: var(--btn-p-color);
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.btn-download {
-    width: 141px;
-    height: 52px;
-}
-
-main {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 80px;
-}
-
-main .section-hero {
-    width: 100%;
-    height: fit-content;
-    background-color: var(--bg-color);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 131px;
-}
-
-main .section-hero .hero-content {
-    width: 734px;
-    height: 354px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 40px;
-}
-
-main .section-hero .hero-content h2 {
-    font-size: 48px;
-    font-weight: 700;
-    color: var(--p-color);
-}
-
-main .section-hero .hero-content p {
-    width: 438px;
-    height: 94px;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--p-color);
-}
-
-main .section-container {
-    width: 66.6%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 110px;
-}
-
-main .section-container .section-feature-01 {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 110px;
-    flex-wrap: wrap;
-}
-
-main .section-container .section-feature-01 img {
-    width: 660px;
-    aspect-ratio: 66 / 39;
-    border-radius: 30px;
-}
-
-main .section-container .section-feature-01 .feature-content {
-    width: 510px;
-    height: 224px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 36px;
-}
-
-main .section-container .section-feature-01 .feature-content h3 {
-    font-size: 36px;
-    font-weight: 700;
-    color: var(--p-color);
-    text-align: center;
-}
-
-main .section-container .section-feature-01 .feature-content p {
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--p-color);
-    text-align: left;
-}
-
-main .section-container .section-feature-02 {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 80px;
-}
-
-main .section-container .section-feature-02 .feature-header {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 36px;
-}
-
-main .section-container .section-feature-02 .feature-header h3 {
-    width: 100%;
-    font-size: 48px;
-    font-weight: 700;
-    color: var(--btn-color);
-    text-align: center;
-}
-
-main .section-container .section-feature-02 .feature-header p {
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--p-color);
-    text-align: center;
-}
-
-main .section-container .section-feature-02 .feature-header p span {
-    font-weight: 700;
-    color: var(--btn-color);
-}
-
-main .section-container .section-feature-02 .card-grid {
-    width: 1280px;
-    height: fit-content;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 73px;
-}
-
-main .section-container .section-feature-02 .card-grid img {
-    aspect-ratio: 1 / 1;
-    border-radius: 30px;
-}
-
-main .section-container .section-feature-02 .feature-footer {
-    width: fit-content;
-    height: fit-content;
-    flex-wrap: wrap;
-}
-
-main .section-container .section-feature-02 .feature-footer p {
-    max-width: 737px;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--p-color);
-    float: left;
-    text-align: left;
-}
-
-main .section-container .section-feature-02 .feature-footer .btn-learn {
-    width: 149px;
-    height: 50px;
-    float: right;
-}
-
-main .section-container .section-feature-03 {
-    width: 100%;
-    height: fit-content;
-    padding: 30px;
-    border-radius: 30px;
-    background-color: var(--sub-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 30px;
-    flex-wrap: wrap;
-}
-
-main .section-container .section-feature-03 .newsletter-content {
-    max-width: 490px;
-    color: var(--btn-p-color);
-    text-align: left;
-}
-
-main .section-container .section-feature-03 .newsletter-content h3 {
-    font-size: 36px;
-    font-weight: 700;
-}
-
-main .section-container .section-feature-03 .newsletter-content p {
-    font-size: 14px;
-    font-weight: 400;
-}
-
-main .section-container .section-feature-03 .newletter-form {
-    width: 530px;
-    height: fit-content;
-    position: relative;
-}
-
-main .section-container .section-feature-03 .newletter-form img {
-    width: 24px;
-    aspect-ratio: 1 / 1;
-    position: absolute;
-    top: 18px;
-    left: 23px;
-}
-
-main .section-container .section-feature-03 .newletter-form input {
-    width: 530px;
-    height: 60px;
-    background-color: var(--btn-p-color);
-    border-radius: 60px;
-    color: var(--p-color);
-    font-size: 16px;
-    font-weight: 400;
-}
-
-main .section-container .section-feature-03 .newletter-form .btn-sub {
-    width: 138px;
-    height: 50px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-}
-
-
-
-
-main .img {
-    width: 100%;
-    height: 340px;
-    background-image: url(./img/img_5.jpg);
-    background-repeat: no-repeat;
-    background-position: 0% 40%;
-    background-size: cover;
-}
-
-/* .scroll-top-btn {
-    width: 50px;
-    height: 50px;
-    border: solid 1px #c4c4c4;
-    border-radius: 100%;
-    position: sticky;
-} */
